css1.css
/* ... */
  .tabs:not(:last-child) {
    margin-bottom: 1.5rem; }
  .tabs a {
    -ms-flex-align: center;
        align-items: center;
    border-bottom-color: #dbdbdb;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    color: #4a4a4a;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-pack: center;
        justify-content: center;
    margin-bottom: -1px;
    padding: 0.5em 1em;
    vertical-align: top; }
    .tabs a:hover {
      border-bottom-color: #363636;
      color: #363636; }
  .tabs li {
    display: block; }
    .tabs li.is-active a {
      border-bottom-color: #3273dc;
      color: #3273dc; }
  .tabs ul {
    -ms-flex-align: center;
        align-items: center;
    border-bottom-color: #dbdbdb;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-positive: 1;
        flex-grow: 1;
    -ms-flex-negative: 0;
        flex-shrink: 0;
    -ms-flex-pack: start;
        justify-content: flex-start; }
    .tabs ul.is-left {
      padding-right: 0.75em; }
    .tabs ul.is-center {
      -ms-flex: none;
          flex: none;
      -ms-flex-pack: center;
          justify-content: center;
      padding-left: 0.75em;
      padding-right: 0.75em; }
    .tabs ul.is-right {
      -ms-flex-pack: end;
          justify-content: flex-end;
      padding-left: 0.75em; }
  .tabs .icon:first-child {
    margin-right: 0.5em; }
  .tabs .icon:last-child {
    margin-left: 0.5em; }
  .tabs.is-centered ul {
    -ms-flex-pack: center;
        justify-content: center; }
  .tabs.is-right ul {
    -ms-flex-pack: end;
        justify-content: flex-end; }
  .tabs.is-boxed a {
    border: 1px solid transparent;
    border-radius: 3px 3px 0 0; }
    .tabs.is-boxed a:hover {
      background-color: whitesmoke;
      border-bottom-color: #dbdbdb; }
  .tabs.is-boxed li.is-active a {
    background-color: white;
    border-color: #dbdbdb;
    border-bottom-color: transparent !important; }
  .tabs.is-fullwidth li {
    -ms-flex-positive: 1;
        flex-grow: 1;
    -ms-flex-negative: 0;
        flex-shrink: 0; }
  .tabs.is-toggle a {
    border-color: #dbdbdb;
    border-style: solid;
    border-width: 1px;
    margin-bottom: 0;
    position: relative; }
    .tabs.is-toggle a:hover {
      background-color: whitesmoke;
      border-color: #b5b5b5;
      z-index: 2; }
  .tabs.is-toggle li + li {
    margin-left: -1px; }
  .tabs.is-toggle li:first-child a {
    border-radius: 3px 0 0 3px; }
  .tabs.is-toggle li:last-child a {
    border-radius: 0 3px 3px 0; }
  .tabs.is-toggle li.is-active a {
    background-color: #3273dc;
    border-color: #3273dc;
    color: #fff;
    z-index: 1; }
  .tabs.is-toggle ul {
    border-bottom: none; }
  .tabs.is-toggle.is-toggle-rounded li:first-child a {
    border-bottom-left-radius: 290486px;
    border-top-left-radius: 290486px;
    padding-left: 1.25em; }
  .tabs.is-toggle.is-toggle-rounded li:last-child a {
    border-bottom-right-radius: 290486px;
    border-top-right-radius: 290486px;
    padding-right: 1.25em; }
  .tabs.is-small {
    font-size: 0.75rem; }
  .tabs.is-medium {
    font-size: 1.25rem; }
  .tabs.is-large {
    font-size: 1.5rem; }

.column {
  display: block;
  -ms-flex-preferred-size: 0;
      flex-basis: 0;
  -ms-flex-positive: 1;
      flex-grow: 1;
  -ms-flex-negative: 1;
      flex-shrink: 1;
  padding: 0.75rem; }
  .columns.is-mobile > .column.is-narrow {
    -ms-flex: none;
        flex: none; }
  .columns.is-mobile > .column.is-full {
    -ms-flex: none;
        flex: none;
    width: 100%; }
  .columns.is-mobile > .column.is-three-quarters {
    -ms-flex: none;
        flex: none;
    width: 75%; }
  .columns.is-mobile > .column.is-two-thirds {
    -ms-flex: none;
        flex: none;
    width: 66.6666%; }
  .columns.is-mobile > .column.is-half {
    -ms-flex: none;
        flex: none;
    width: 50%; }
  .columns.is-mobile > .column.is-one-third {
    -ms-flex: none;
        flex: none;
    width: 33.3333%; }
  .columns.is-mobile > .column.is-one-quarter {
    -ms-flex: none;
        flex: none;
    width: 25%; }
  .columns.is-mobile > .column.is-one-fifth {
    -ms-flex: none;
        flex: none;
    width: 20%; }
  .columns.is-mobile > .column.is-two-fifths {
    -ms-flex: none;
        flex: none;
    width: 40%; }
  .columns.is-mobile > .column.is-three-fifths {
    -ms-flex: none;
        flex: none;
    width: 60%; }
  .columns.is-mobile > .column.is-four-fifths {
    -ms-flex: none;
        flex: none;
    width: 80%; }
  .columns.is-mobile > .column.is-offset-three-quarters {
    margin-left: 75%; }
  .columns.is-mobile > .column.is-offset-two-thirds {
    margin-left: 66.6666%; }
  .columns.is-mobile > .column.is-offset-half {
    margin-left: 50%; }
  .columns.is-mobile > .column.is-offset-one-third {
    margin-left: 33.3333%; }
  .columns.is-mobile > .column.is-offset-one-quarter {
    margin-left: 25%; }
  .columns.is-mobile > .column.is-offset-one-fifth {
    margin-left: 20%; }
  .columns.is-mobile > .column.is-offset-two-fifths {
    margin-left: 40%; }
  .columns.is-mobile > .column.is-offset-three-fifths {
    margin-left: 60%; }
  .columns.is-mobile > .column.is-offset-four-fifths {
    margin-left: 80%; }
  .columns.is-mobile > .column.is-1 {
    -ms-flex: none;
        flex: none;
    width: 8.33333%; }
  .columns.is-mobile > .column.is-offset-1 {
    margin-left: 8.33333%; }
  .columns.is-mobile > .column.is-2 {
    -ms-flex: none;
        flex: none;
    width: 16.66667%; }
  .columns.is-mobile > .column.is-offset-2 {
    margin-left: 16.66667%; }
  .columns.is-mobile > .column.is-3 {
    -ms-flex: none;
        flex: none;
    width: 25%; }
  .columns.is-mobile > .column.is-offset-3 {
    margin-left: 25%; }
  .columns.is-mobile > .column.is-4 {
    -ms-flex: none;
        flex: none;
    width: 33.33333%; }
  .columns.is-mobile > .column.is-offset-4 {
    margin-left: 33.33333%; }
/* ... */

